--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
 
             <div class="home__img">
-                <img src="perfil.png" alt="">
+                <img src="assets/img/perfil.png" alt="">
             </div>
         </section>
 
